<?xml version="1.0" encoding="utf-8"?>

<!--
The bottom menu bar where the user chooses actions.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_border"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:orientation="horizontal"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentBottom="true"
    android:background="@color/yellow"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp">

        <ImageButton
            android:contentDescription="@string/delete_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/delete"
            android:src="@drawable/ic_delete_24dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/bullets"
            android:layout_toEndOf="@id/bullets"
            android:padding="7dp"
            android:layout_margin="0dp"
            android:background="@color/yellow" />

        <ImageButton
            android:contentDescription="@string/save_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/save"
            android:src="@drawable/ic_save_24dp"
            android:padding="7dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/mail"
            android:layout_toStartOf="@+id/mail"
            android:background="@color/yellow" />

        <ImageButton
            android:contentDescription="@string/menu_desc"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/menu"
            android:src="@drawable/ic_menu_24dp"
            android:padding="7dp"
            android:layout_margin="0dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/save"
            android:layout_toStartOf="@+id/save"
            android:background="@color/yellow" />

        <ImageButton
            android:contentDescription="@string/bullet"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/bullets"
            android:src="@drawable/ic_format_list_bulleted_24dp"
            android:padding="7dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/mail"
            android:layout_toEndOf="@+id/mail"
            android:background="@color/yellow" />

        <ImageButton
            android:contentDescription="@string/mail_symbol"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/mail"
            android:src="@drawable/ic_email_24dp"
            android:padding="7dp"
            android:layout_centerHorizontal="true"
            android:background="@color/yellow" />

        <ImageButton
            android:contentDescription="@string/clear"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/clear_note"
            android:src="@drawable/ic_clear_24dp"
            android:padding="7dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/yellow" />

</RelativeLayout>